
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ sourcing ;

int
quitcmd(void)
{




 if (sourcing)
  return (1);
 return (-1);
}
